# evo.ninja

./: .env.template  .eslintrc.js  .gitignore  .gitmodules  .nvmrc  .prettierrc  CNAME  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  asset-manifest.json  assistants.json  chat.ts  cli.ts  docker-compose.yml  evo-ninja.code-workspace  index.html  index.ts  jest.config.js  js-shims.js  list  llm.ts  notes  openai.ts  package.json  pg.ipynb  pyproject.toml  run  shim-test.js  test-prompts.txt  test.js  todo  tsconfig.json  turbo.json
.github/: CODEOWNERS  MAINTAINERS
agbenchmark/: benchmarks.py  config.json
agbenchmark_config/: challenges_already_beaten.json  config.json
autonolas/: research.py
benchmarks/: bench.sh  commands.txt  pyproject.toml
benchmarks/agbenchmark_config/: config.json
cache/: aHR0cHM6Ly93d3cuY25iYy5jb20vMjAyMi8xMS8yOS90d2l0dGVyLXN0b3BzLXBvbGljaW5nLWNvdmlkLTE5LW1pc2luZm9ybWF0aW9uLXVuZGVyLWNlby1lbG9uLW11c2suaHRtbA==  aHR0cHM6Ly93d3cubmF0dXJlLmNvbS9hcnRpY2xlcy9zNDE0NjctMDIyLTM0NzY5LTY=  aHR0cHM6Ly93d3cudGhlZ3VhcmRpYW4uY29tL3RlY2hub2xvZ3kvMjAyMy9hdWcvMjkvdHdpdHRlci14LXBvbGl0aWNhbC1hZHMtdXMtcG9saWN5LW1pc2luZm9ybWF0aW9u  aHR0cHM6Ly9idXNpbmVzcy50d2l0dGVyLmNvbS9lbi9oZWxwL2Fkcy1wb2xpY2llcy9hZHMtY29udGVudC1wb2xpY2llcy9wb2xpdGljYWwtY29udGVudC5odG1s  aHR0cHM6Ly9oZWxwLnR3aXR0ZXIuY29tL2VuL3J1bGVzLWFuZC1wb2xpY2llcy9jcmlzaXMtbWlzaW5mb3JtYXRpb24=  aHR0cHM6Ly9oZWxwLnR3aXR0ZXIuY29tL2VuL3J1bGVzLWFuZC1wb2xpY2llcy9lbGVjdGlvbi1pbnRlZ3JpdHktcG9saWN5  aHR0cHM6Ly9oZWxwLnR3aXR0ZXIuY29tL2VuL3Jlc291cmNlcy9hZGRyZXNzaW5nLW1pc2xlYWRpbmctaW5mbw==
docs/: architecture.md  evo-diagram2.0-beta.drawio
evo/: Agent.ts  index.ts  loop.ts  prompts.ts
evo_researcher/: main.py  test.py
evopynja/: benchmark.py  gaia_dataset.jsonl  main.py
functions/: executeFunc.ts
operations/: agent.ask.json  agent.onGoalAchieved.json  agent.speak.json  crypto.getPrice.json  fs.readFile.json  fs.writeFile.json  math.divide.json
scripts/: agent.ask.js  agent.ask.json  agent.onGoalAchieved.js  agent.onGoalAchieved.json  agent.onGoalFailed.js  agent.onGoalFailed.json  agent.speak.js  agent.speak.json  cmd.shellExec.js  cmd.shellExec.json  crypto.getPrice.js  crypto.getPrice.json  csv.addColumn.js  csv.addColumn.json  csv.filterRows.js  csv.filterRows.json  csv.join.js  (+81 more)
(+507 files in other folders)
