[tool.poetry]
name = "evo_researcher"
version = "0.1.0"
description = ""
authors = ["Nestor Amesty <nestor09amesty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
langchain = "^0.0.349"
pyautogen = "^0.2.2"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
markdownify = "^0.11.6"
pandas = "^2.1.4"
pytest = "^7.4.3"
openai = "^1.4.0"
chromadb = "^0.4.20"
scrapingbee = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format= "%Y-%m-%d %H:%M:%S"