[tool.poetry]
name = "evo_researcher"
version = "0.1.0"
description = ""
authors = ["Nestor Amesty <nestor09amesty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
langchain = "^0.0.349"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
markdownify = "^0.11.6"
pandas = "^2.1.4"
pytest = "^7.4.3"
openai = "^1.4.0"
chromadb = "^0.4.20"
spacy = "^3.7.2"
google-api-python-client = "^2.111.0"
tiktoken = "0.5.1"
types-requests = "^2.31.0.10"
types-beautifulsoup4 = "^4.12.0.7"
tavily-python = "^0.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
